--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
             // Exibir o resultado na página
             document.getElementById("resultado").textContent = 
-                "Área total: ${area.toFixed(2)} m²\nMantas necessárias: ${mantasNecessarias}";
+                `Área total: ${area.toFixed(2)} m²\nMantas necessárias: ${mantasNecessarias}`;
+
         }
     </script>
 </head>
